# face-recognition-ml-opencv

./: .gitignore  Procfile  app.json  pyproject.toml  readme.md  requirements.dev.txt  requirements.txt
model-training/: .gitignore  sports_celebrity_classification.ipynb
server/: app.py  requirements.txt  train.py  util.py
server/static/js/: app.js
server/templates/: app.html
