[tool.poetry]
name = "facerecognition"
version = "0.1.0"
description = ""
authors = ["Naman Tamrakar <namantam1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.1"
numpy = "^1.22.3"
scikit-learn = "^1.0.2"
opencv-python = "^4.5.5"
PyWavelets = "^1.3.0"

[tool.poetry.dev-dependencies]
matplotlib = "^3.5.1"
pandas = "^1.4.2"
seaborn = "^0.11.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
